--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   7. Save this file and re-upload to GitHub — you're done!
 ============================================================ -->
 <script>
-  const FIREBASE_CONFIG = {
-    apiKey:            "PASTE_YOUR_apiKey_HERE",
-    authDomain:        "PASTE_YOUR_authDomain_HERE",
-    databaseURL:       "PASTE_YOUR_databaseURL_HERE",
-    projectId:         "PASTE_YOUR_projectId_HERE",
-    storageBucket:     "PASTE_YOUR_storageBucket_HERE",
-    messagingSenderId: "PASTE_YOUR_messagingSenderId_HERE",
-    appId:             "PASTE_YOUR_appId_HERE"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyA87AispmFcuHFHEwDAtRzEnMWbCIYtWA8",
+  authDomain: "kuofuprelim.firebaseapp.com",
+  databaseURL: "https://kuofuprelim-default-rtdb.firebaseio.com",
+  projectId: "kuofuprelim",
+  storageBucket: "kuofuprelim.firebasestorage.app",
+  messagingSenderId: "515466008918",
+  appId: "1:515466008918:web:f30c8a45e71578559e1ef7"
+};
 </script>
 
 <style>
