--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   7. Save this file and re-upload to GitHub — you're done!
 ============================================================ -->
 <script>
-const firebaseConfig = {
+const FIREBASE_CONFIG = {
   apiKey: "AIzaSyA87AispmFcuHFHEwDAtRzEnMWbCIYtWA8",
   authDomain: "kuofuprelim.firebaseapp.com",
   databaseURL: "https://kuofuprelim-default-rtdb.firebaseio.com",
