--- a/index.html
+++ b/index.html
@@ -68,14 +68,18 @@
 
     // IMPORTANT: variable name must be FIREBASE_CONFIG (not firebaseConfig)
     const FIREBASE_CONFIG = {
-      apiKey: "AIzaSyA87AispmFcuHFHEwDAtRzEnMWbCIYtWA8",
-      authDomain: "kuofuprelim.firebaseapp.com",
-      databaseURL: "https://kuofuprelim-default-rtdb.firebaseio.com",
-      projectId: "kuofuprelim",
-      storageBucket: "kuofuprelim.firebasestorage.app",
-      messagingSenderId: "515466008918",
-      appId: "1:515466008918:web:f30c8a45e71578559e1ef7"
+    apiKey: "AIzaSyA87AispmFcuHFHEwDAtRzEnMWbCIYtWA8",
+    authDomain: "kuofuprelim.firebaseapp.com",
+    databaseURL: "https://kuofuprelim-default-rtdb.firebaseio.com",
+    projectId: "kuofuprelim",
+    storageBucket: "kuofuprelim.firebasestorage.app",
+    messagingSenderId: "515466008918",
+    appId: "1:515466008918:web:f30c8a45e71578559e1ef7"
     };
+
+    const firebaseConfig = {
+
+};
 
     const $ = (id) => document.getElementById(id);
     const show = (screenId) => {
